# f1-regulations-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/evaluations/: 2026-seed-v1.json
docs/: architecture.md  experiments.md  pipeline.md  visual-content.md
experiments/diagnostics/: section-a-general.json  section-a-general.md  section-b-sporting.json  section-b-sporting.md  section-c-technical.json  section-c-technical.md  section-d-financial-teams.json  section-d-financial-teams.md  section-e-financial-pu.json  section-e-financial-pu.md  section-f-operational.json  section-f-operational.md
src/f1_rag/: __init__.py  cli.py  config.py  diagnostics.py  errors.py  logging_utils.py  models.py  pipeline.py  registry.py
src/f1_rag/chunking/: __init__.py  base.py  fixed_window.py  regulation.py
src/f1_rag/context/: __init__.py  assembly.py
src/f1_rag/embeddings/: __init__.py  base.py  hashing.py  sentence_transformer.py
src/f1_rag/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
src/f1_rag/extraction/: __init__.py  cleanup.py  text.py  visuals.py
src/f1_rag/generation/: __init__.py  anthropic_client.py  base.py  prompts.py
src/f1_rag/indexing/: __init__.py  base.py  chroma_store.py  numpy_store.py
src/f1_rag/parsing/: __init__.py  headings.py  regulations.py
src/f1_rag/reranking/: __init__.py  base.py  identity.py
tests/: conftest.py  test_chunking.py  test_embeddings_index.py  test_evaluation.py  test_extraction_cleanup.py  test_generation_tracing.py  test_models_registry.py  test_parsing.py  test_retrieval_context.py
(+9 files in other folders)
